# simpleHarmony

./: .gitignore  README.md  setup.cfg  tox.ini
examples/: Example.ipynb  exampleLemniscate.csv
src/simpleHarmony/: simpleHarmony.py
