[metadata]
name = simpleHarmony
version = 0.1.0
author = Brantley Vose
author_email = brantmv@gmail.com
description = A Sage package for finding discrete harmonic representatives on simplicial complexes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/prismika/simpleHarmony
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6

[options.extras_require]
passagemath =
    passagemath-modules
    passagemath-repl

[options.packages.find]
where = src